--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "@enzo_corsico/times-up-game",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/index.js",
-  "types": "src/index.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "/dist"
   ],
   "scripts": {
     "build": "tsc",
-    "prepare": "tsc",
-    "version": "tsc"
+    "prepare": "tsc"
   },
   "repository": {
     "type": "git",
